# ALauncher

./: .d.ts  .gitignore  eslint.config.js  global.d.ts  index.html  package.json  tsconfig.base.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: build-server.ts  build.ts  release.template.md  release.ts
scripts/templates/: release.template.md
server/: index.ts  server.ts
shared/: curseforge.type.ts  launcher.type.ts  utils.ts  ws.type.ts
shared/constants/: curseforge.const.ts  launcher.constant.ts  routes.ts
shared/dtos/: app.dto.ts  base.dto.ts  category.dto.ts  content.dto.ts  instance.dto.ts  launcher.dto.ts  version.dto.ts  world.dto.ts
shared/enums/: general.enum.ts
shared/mappings/: general.mapping.ts
shared/schema/: additional.schema.ts  instance.schema.ts
shared/schemas/: additional.schema.ts  category.schema.ts  content.schema.ts  instance.schema.ts  launcher.schema.ts  version.schema.ts
shared/types/: category.type.ts  launcher.ts  version.type.ts
shared/utils/: general.utils.ts  zod.dto.ts  zod.utils.ts
src/: App.tsx  main.tsx
src-client/: index.html  tsconfig.json  vite.config.mjs
src-client/src/: App.tsx  main.tsx
src-server/: index.ts  tsconfig.json
src-server/common/: register-controller.ts
src-server/controllers/: instanceController.ts  launcherController.ts  (+1 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  log.rs  main.rs  windows.rs
src-tauri/updater/: .gitignore  Cargo.toml
src-tauri/updater/src/: main.rs
(+235 files in other folders)
